<resources>
    <string name="app_name">Github Repos</string>
    <string name="username">Username</string>
    <string name="password">Password</string>

    <string name="prompt_info_title">Github Repos Authentication</string>
    <string name="prompt_info_subtitle">Please login to get access</string>
    <string name="prompt_info_description">Github Repos is using Android biometric authentication</string>
    <string name="prompt_info_use_app_password">Use app password</string>
    <string name="secret_key_name">biometric_sample_encryption_key</string>
    <string name="btn_login">Login</string>
    <string name="btn_biometric_authorization">Use biometrics</string>
    <string name="desc_biometrics_authorization">Enter your login ID and password to confirm activation of Biometric Login.</string>

    <string name="invalid_username">Invalid Username</string>
    <string name="invalid_password">Invalid Password</string>
    <string name="loading">Loading</string>
    <string name="language">Language: %s</string>
    <string name="logout">Logout</string>
</resources>
